--- a/public/index.html
+++ b/public/index.html
@@ -27,5 +27,13 @@ al+Icons" rel="stylesheet">
     <div id="app"></div>
     <!-- built files will be auto injected -->
 </body>
+<script type="text/javascript">
+if (window.location.hash == '#_=_') {
+    history.replaceState ?
+        history.replaceState(null, null,
+            window.location.href.split('#')[0]) :
+        window.location.hash = '';
+}
+</script>
 
 </html>
